--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
     <!-- "Reach out" section -->
     <section>
       <h2>Reach Out</h2>
+      <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2798.1938912292426!2d-75.70613048434895!3d45.46589797910089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce1b4bc37939ff%3A0xb19214c12f987521!2s124%20Rue%20Mareng%C3%A8re%2C%20Gatineau%2C%20QC%20J8T%206Y9!5e0!3m2!1sen!2sca!4v1645066493138!5m2!1sen!2sca" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </div>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br/>
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br/>
+          Some Town, Ca <br/>
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
     </section>
 
     <!-- footer -->
