--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- navigation -->
     <header>
       <h1>
-        <a href="/">RUN BUDDY</a> 
+        <a href="#">RUN BUDDY</a> 
       </h1>
       <nav>
 
@@ -171,7 +171,7 @@
     <footer>
       <h2> ❤️ Made with love by Run Buddy.</h2>
       <div>
-        <a href="#">Read our Privacy Policy</a><br/>
+        <a href="./privacy-policy.html">Read our Privacy Policy</a><br/>
         &copy; 2019 Run Buddy, Inc.
       </div>
     </footer>
