--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
       <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2798.1938912292426!2d-75.70613048434895!3d45.46589797910089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce1b4bc37939ff%3A0xb19214c12f987521!2s124%20Rue%20Mareng%C3%A8re%2C%20Gatineau%2C%20QC%20J8T%206Y9!5e0!3m2!1sen!2sca!4v1645066493138!5m2!1sen!2sca" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe>
+
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name" />
+
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+
         <div>
           <h3>Run Buddy</h3>
           <p>
